app/assets/stylesheets/styles/globals.scss
// Global styling patterns.

@use 'bootstrap/scss/bootstrap';
@use "vendor/googleapis_source_sans_pro";
@use "./_variables";

@charset "utf-8";

html {
  font-size: variables.$font-size;
}

body {
  font-family: "Source Sans Pro", sans-serif;
  font-size: variables.$font-size;
}

main {
  background-color: #ffffff;
  padding-bottom: 80px;
  width: 100%;
  margin-top: 51px; // accommodate the navbar
}

// Make all images responsive by default
img {
  @extend .img-fluid;
  margin: 0 auto;
}

// Headers
h1.title {
  font-weight: 100;
  margin-bottom: 20px;
  letter-spacing: 1.5px;
  font-size: 3rem;
  span {
    letter-spacing: 0.25px;
  }
}

h2 {
  font-size: 2.215rem;
}

h3 {
  font-size: 1.625rem;
}

h4 {
  font-size: 1.375rem;
}

h5 {
  font-size: 1.125rem;
}

// Forms
form {
  line-height: 1;
}

label {
  font-weight: 700;
}

// Links
a {
  color: variables.$link-blue;
  text-decoration: none;
}

a:hover,
a:active,
a:visited,
a:focus {
  color: variables.$dark-blue;
  text-decoration: underline;
}

.border-bottom {
  border-bottom: 1px solid variables.$black;
  padding-bottom: 10px;
}

.container {
  @media (min-width: 1200px) {
    max-width: 85% !important;
  }
}

.hidden {
  display: none;
}

.grid {
  display: grid;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
}

.grid-columns-2 {
  grid-template-columns: repeat(2, 1fr);
}

.grid-columns-3 {
  grid-template-columns: repeat(3, 1fr);
}

.grid-rows-2 {
  grid-template-rows: repeat(2, 1fr);
}

